Added full battery of tests for customerOrderService